...
                ListItem(
                    modifier = Modifier.clickable {
                        uriHandler.openUri(BUG_REPORT_URL)
                    },
                    leadingContent = { GithubIcon(modifier = Modifier.size(24.dp))},
                    headlineContent = {
                    Text(text = "GitHub",  maxLines = 1)
                })
                Divider()
                ListItem(
                    modifier = Modifier.clickable {
                        EmailUtils.sendBugReportEmail(context)
                    },
...
